# kSentinel

./: .gitignore  README.md  docker-compose.yml
backend/: db_struct.sql  go.mod  go.sum
backend/auth/: Dockerfile  main.go
backend/auth/config/: sample-config.go  sample_config.go
backend/auth/controllers/: auth.go  common.go  test.go  token.go
backend/auth/models/: auth.go  db.go
backend/auth/router/: router.go
backend/kscore/: Dockerfile  main.go
backend/kscore/controllers/: device.go  events.go
backend/kscore/database/: db.go
backend/kscore/globals/: globals.go
backend/kscore/models/: device.go  event.go
backend/kscore/router/: router.go
backend/tracing/: main.go
backend/utils/: utils.go
core/: CMakeLists.txt  build.sh  logs.txt  main.cpp
core/include/: auth.hpp  counter.hpp  device.hpp  envvars.h  logger.hpp  models.h  networking.hpp  parser.h  runner.hpp  uberswitch.hpp  utils.h  utils.hpp
core/include/crypto/: md5.hpp
core/src/: CMakeLists.txt  main.cpp
core/src/auth/: CMakeLists.txt  auth.cpp
core/src/crypto/: AES.cpp  CMakeLists.txt
core/src/device/: CMakeLists.txt  device.cpp
core/src/logging/: CMakeLists.txt  logger.cpp
core/src/networking/: CMakeLists.txt  http.cpp
core/src/parser/: CMakeLists.txt  parser.cpp
core/src/runner/: CMakeLists.txt  ksmain.cpp  runner.cpp
core/src/utils/: utils.cpp
core/src/yaml/: CMakeLists.txt  yaml.cpp
docs/: Dockerfile
docs/source/: conf.py  core.md  index.rst
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  constants.js  main.jsx
(+39 files in other folders)
