cmake_minimum_required(VERSION 3.25)
include_directories(${CMAKE_SOURCE_DIR}/include/plog)

include_directories(${CMAKE_SOURCE_DIR}/include)

add_subdirectory(parser)
add_subdirectory(yaml)
add_subdirectory(utils)
add_subdirectory(networking)
add_subdirectory(device)
add_subdirectory(runner)
add_subdirectory(logging)
add_subdirectory(auth)
add_subdirectory(crypto)
add_executable(kSentinel ${CMAKE_SOURCE_DIR}/src/main.cpp)
set(CMAKE_CXX_STANDARD_LIBRARIES "-lcurl")
target_link_libraries(kSentinel  parser  device networking runner utils logging auth yaml crypto)